--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
+    "@rollup/rollup-linux-x64-gnu": "^4.22.4",
     "autoprefixer": "^10.4.20",
     "classnames": "^2.5.1",
     "json-server": "^1.0.0-beta.2",
